parser/src/snapshots/long_parser__expr__parse_add_sub.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Binary(
            Sub,
            Located {
                inner: Binary(
                    Add,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:1,
                    },
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:5,
                    },
                ),
                loc: None:1:1,
            },
            Located {
                inner: Literal(
                    Int(
                        Int(
                            2,
                        ),
                    ),
                ),
                loc: None:1:9,
            },
        ),
        loc: None:1:1,
    },
)
