parser/src/snapshots/long_parser__expr__parse_and_or.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Binary(
            Or,
            Located {
                inner: Binary(
                    And,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:1,
                    },
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:5,
                    },
                ),
                loc: None:1:1,
            },
            Located {
                inner: Literal(
                    Int(
                        Int(
                            2,
                        ),
                    ),
                ),
                loc: None:1:9,
            },
        ),
        loc: None:1:1,
    },
)
