parser/src/snapshots/long_parser__expr__parse_eq_ne.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Located {
        inner: Binary(
            LogicalAnd,
            Located {
                inner: Binary(
                    Eq,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:1,
                    },
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:6,
                    },
                ),
                loc: None:1:1,
            },
            Located {
                inner: Binary(
                    Ne,
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:11,
                    },
                    Located {
                        inner: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:16,
                    },
                ),
                loc: None:1:11,
            },
        ),
        loc: None:1:1,
    },
)
