parser/src/snapshots/long_parser__expr__parse_lt_le_gt_ge.snap
---
source: parser/src/expr.rs
expression: node

---
Ok(
    Expr {
        kind: Binary(
            LogicalAnd,
            Expr {
                kind: Binary(
                    LogicalAnd,
                    Expr {
                        kind: Binary(
                            LogicalAnd,
                            Expr {
                                kind: Binary(
                                    Lt,
                                    Expr {
                                        kind: Literal(
                                            Int(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                        ),
                                        loc: None:1:1,
                                    },
                                    Expr {
                                        kind: Literal(
                                            Int(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                        ),
                                        loc: None:1:5,
                                    },
                                ),
                                loc: None:1:1,
                            },
                            Expr {
                                kind: Binary(
                                    Le,
                                    Expr {
                                        kind: Literal(
                                            Int(
                                                Int(
                                                    0,
                                                ),
                                            ),
                                        ),
                                        loc: None:1:10,
                                    },
                                    Expr {
                                        kind: Literal(
                                            Int(
                                                Int(
                                                    1,
                                                ),
                                            ),
                                        ),
                                        loc: None:1:15,
                                    },
                                ),
                                loc: None:1:10,
                            },
                        ),
                        loc: None:1:1,
                    },
                    Expr {
                        kind: Binary(
                            Gt,
                            Expr {
                                kind: Literal(
                                    Int(
                                        Int(
                                            0,
                                        ),
                                    ),
                                ),
                                loc: None:1:20,
                            },
                            Expr {
                                kind: Literal(
                                    Int(
                                        Int(
                                            1,
                                        ),
                                    ),
                                ),
                                loc: None:1:24,
                            },
                        ),
                        loc: None:1:20,
                    },
                ),
                loc: None:1:1,
            },
            Expr {
                kind: Binary(
                    Ge,
                    Expr {
                        kind: Literal(
                            Int(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                        loc: None:1:29,
                    },
                    Expr {
                        kind: Literal(
                            Int(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                        loc: None:1:34,
                    },
                ),
                loc: None:1:29,
            },
        ),
        loc: None:1:1,
    },
)
